--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Hello World!</h1>
     We are using Node.js <span id="node-version"></span>,
     Chromium <span id="chrome-version"></span>,
-    and The Updated one YEET <span id="electron-version"></span>.
+    and The Updated one version 3 <span id="electron-version"></span>.
 
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
