--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-    <h1>Electron Auto Updated Example</h1>
+    <h1>Electron Auto Updated Example (NEW!)</h1>
     <p id="version"></p>
     <div id="notification" class="hidden">
         <p id="message"></p>
